[gd_scene load_steps=3 format=3 uid="uid://dkoe217u1ocks"]

[ext_resource type="Script" path="res://src/menus/InventoryMenu.gd" id="1_gxdhv"]
[ext_resource type="Theme" uid="uid://dwjxtwdsk2ggs" path="res://assets/ui_themes/ingame_menu.tres" id="1_u35a2"]

[node name="InventoryMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_u35a2")
script = ExtResource("1_gxdhv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.211765, 0.211765, 0.211765, 0.607843)
metadata/_edit_layout_mode = 1

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="MenuTitle" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Inventory"
horizontal_alignment = 1
metadata/_edit_layout_mode = 1

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
metadata/_edit_layout_mode = 1

[node name="LVBox" type="VBoxContainer" parent="Panel/GridContainer"]
layout_mode = 2
offset_right = 248.0
offset_bottom = 177.0
size_flags_horizontal = 3

[node name="KeysHeader" type="Label" parent="Panel/GridContainer/LVBox"]
layout_mode = 2
offset_right = 248.0
offset_bottom = 44.0
text = "keys collected"
horizontal_alignment = 1
uppercase = true

[node name="KeyNoneLabel" type="Label" parent="Panel/GridContainer/LVBox"]
layout_mode = 2
offset_top = 56.0
offset_right = 248.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 26
text = "None"
horizontal_alignment = 1

[node name="KeysBox" type="VBoxContainer" parent="Panel/GridContainer/LVBox"]
layout_mode = 2
offset_top = 101.0
offset_right = 248.0
offset_bottom = 177.0
size_flags_vertical = 3

[node name="RVBox" type="VBoxContainer" parent="Panel/GridContainer"]
layout_mode = 2
offset_left = 252.0
offset_right = 500.0
offset_bottom = 177.0
size_flags_horizontal = 3

[node name="ItemsHeader" type="Label" parent="Panel/GridContainer/RVBox"]
layout_mode = 2
offset_right = 248.0
offset_bottom = 44.0
text = "Items
"
horizontal_alignment = 1
uppercase = true

[node name="PickLabel" type="Label" parent="Panel/GridContainer/RVBox"]
layout_mode = 2
offset_top = 56.0
offset_right = 248.0
offset_bottom = 89.0
theme_override_font_sizes/font_size = 26
text = "Lockpicks: 0"
horizontal_alignment = 1

[node name="CutterLabel" type="Label" parent="Panel/GridContainer/RVBox"]
layout_mode = 2
offset_top = 101.0
offset_right = 248.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 25
text = "Boltcutters: 0"
horizontal_alignment = 1

[node name="NoiseLabel" type="Label" parent="Panel/GridContainer/RVBox"]
layout_mode = 2
offset_top = 144.0
offset_right = 248.0
offset_bottom = 177.0
theme_override_font_sizes/font_size = 26
text = "Noisemakers: 0
"
horizontal_alignment = 1

[node name="ExitButton" type="Button" parent="Panel"]
custom_minimum_size = Vector2(36, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_bottom = 51.0
grow_horizontal = 0
text = "X"
metadata/_edit_layout_mode = 1

[connection signal="pressed" from="Panel/ExitButton" to="." method="hide_menu"]
